------------------------------------------------------------------------
r2473 | gaser | 2023-11-10 09:41:11

Changed paths:
 M CHANGES.txt
 M check_pipeline.sh
 M check_pipeline_homogeneity.m

Changed: Updated check_pipeline.sh and added checks for xml-files.
Changed: Added check whether reöease string is empty in check_pipeline_homogeneity.m
------------------------------------------------------------------------
r2472 | rdahnke | 2023-11-09 10:53:16

Changed paths:
 M CHANGES.txt
 M cat_io_rerun.m
 M cat_vol_pbtsimple.m
 M cat_vol_resize.m

1) Changed:  Added new thickness-based correction in cat_vol_pbtsimple to better
             interpretative WM boundary within the GM/WM partial volume range.
2) Fixed:    Corrected bug in cat_vol_resize. 
3) Changed:  Optimised command-line output of cat_io_rerun. 
------------------------------------------------------------------------
r2471 | gaser | 2023-11-08 21:46:48

Changed paths:
 M CHANGES.txt

Changed: Set default surface processing back to 22 (CS2).
Added:   New function to calculate laterality index for volumes.
Fixed:   Corrected error in cat_batch_bids.sh wehre cat12 folder was not correctly
         defined.
------------------------------------------------------------------------
r2470 | gaser | 2023-11-08 21:43:04

Changed paths:
 M CHANGES.txt
 M cat_batch_bids.sh
 M cat_defaults.m
 M cat_surf_laterality_index.m
 M templates_MNI152NLin2009cAsym/thalamic_nuclei.txt

Changed: Set default surface processing back to 22 (CS2).
Added:   New function to calculate laterality index for volumes.
Fixed:   Corrected error in cat_batch_bids.sh wehre cat12 folder was not correctly
         defined.
------------------------------------------------------------------------
r2467 | rdahnke | 2023-10-04 22:50:35

Changed paths:
 M CAT.maci64/CAT_MarchingCubesGenus0
 M CHANGES.txt
 M cat_vol_eidist.c
 M cat_vol_eidist.mexmaci64
 M cat_vol_pbt.m
 M cat_vol_pbtsimple.m
